refactor AI health query